--- a/Howest.Movies.WebApp/_Imports.razor
+++ b/Howest.Movies.WebApp/_Imports.razor
@@ -13,4 +13,5 @@
 @using Howest.Movies.Dtos.Results
 @using Howest.Movies.Dtos.Requests
 @using Howest.Movies.Dtos.Core
+@using Howest.Movies.Sdk.IdentityDtos.Results
 @using MudBlazor
