--- a/Howest.Movies.WebApp/Components/Dialogs/LoginDialog.razor
+++ b/Howest.Movies.WebApp/Components/Dialogs/LoginDialog.razor
@@ -1,5 +1,4 @@
 ﻿@using Howest.Movies.Sdk.Endpoints.Abstractions
-@using Howest.Movies.WebApp.Models
 <MudDialog Class="p-3">
     <DialogContent>
         <MudTextField Label="Email" 
@@ -29,7 +28,7 @@
             return;
         }
 
-        MudDialog.Close(DialogResult.Ok(new User
+        MudDialog.Close(DialogResult.Ok(new UserInfoResult
         {
             Email = _model.Email
         }));
