--- a/Howest.Movies.WebApp/Pages/Home.razor
+++ b/Howest.Movies.WebApp/Pages/Home.razor
@@ -2,7 +2,7 @@
 @using Howest.Movies.Dtos.Filters
 @page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Movies</PageTitle>
 
 <MudOverlay Visible="@(_topRatedMovies == null || _movies == null)" DarkBackground="true" Absolute="true">
     <MudProgressCircular Color="Color.Secondary" Indeterminate="true" />
