--- a/Howest.Movies.WebApp/Components/Dialogs/LoginDialog.razor
+++ b/Howest.Movies.WebApp/Components/Dialogs/LoginDialog.razor
@@ -17,6 +17,7 @@
     private readonly Sdk.IdentityDtos.Request _model = new();
     
     [Inject] private IIdentityEndpoint IdentityEndpoint { get; init; } = null!;
+    [Inject] private ISnackbar Snackbar { get; init; } = null!;
     
     [CascadingParameter] public MudDialogInstance MudDialog { get; set; } = null!;
     
@@ -25,6 +26,7 @@
         var result = await IdentityEndpoint.LoginAsync(_model);
         if (!result.IsSuccess)
         {
+            Snackbar.Add(result.Messages.First().Message, Severity.Error);
             return;
         }
 
